다음 지도 불러오기 및 Sass 세팅

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   <div id="app"></div>
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5a79fc864274662c7592f4c2f8ca19d8&libraries=services,clusterer"></script>
   <script src="src/main.js"></script>
+
 </body>
 </html>
